fix: safari svg letter-spacing bug

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -61,3 +61,7 @@ p {
 img {
 	position: relative;
 }
+
+svg text {
+	letter-spacing: normal;
+}
